<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.openwebnet4j</groupId>
	<artifactId>openwebnet4j</artifactId>
	<version>0.3.3-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>openwebnet4j OpenWebNet Java library</name>
	<description>openwebnet4j is a Java library for the Open Web Net protocol</description>
	<url>https://github.com/mvalla/openwebnet4j</url>

	<scm>
		<url>https://github.com/mvalla/openwebnet4j.git</url>
	</scm>
	<licenses>
		<license>
			<name>Eclipse Public License - v 2.0</name>
			<url>https://www.eclipse.org/legal/epl-2.0</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>M. Valla</name>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.25</version>
		</dependency>

		<dependency>
			<groupId>com.neuronrobotics</groupId>
			<artifactId>nrjavaserial</artifactId>
			<!--  <version>3.15.0</version> -->
			<version>5.2.1</version>
		</dependency>

		<!-- ==== BUNDLE ==== -->
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.core</artifactId>
			<version>6.0.0</version>
		</dependency>

		<!-- ==== JUNIT 5 ==== -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.7.0</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<archive>
						<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
					</archive>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- ==== BUNDLE MANIFEST ==== -->
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>4.2.0</version>
				<executions>
					<execution>
						<id>bundle-manifest</id>
						<phase>process-classes</phase>
						<goals>
							<goal>manifest</goal>
						</goals>
					</execution>
				</executions>
				<extensions>true</extensions>
				<configuration>
					<instructions>
						<Export-Package>org.openwebnet4j.*</Export-Package>
						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
						<Bundle-Activator>org.openwebnet4j.bundle.Activator</Bundle-Activator>
						<Import-Package>gnu.io;version="[3.12,6)",*</Import-Package>
					</instructions>
				</configuration>
			</plugin>

			<!-- ==== JUNIT 5 SURFIRE PLUGIN ==== -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<excludes>
						<exclude>org.openwebnet4j.test.integration.*</exclude>
					</excludes>
				</configuration>
			</plugin>

		</plugins>
	</build>
	
	<distributionManagement>
        <repository>
            <id>bintray-mvalla-maven</id>
            <name>mvalla-maven</name>
            <!-- <url>https://api.bintray.com/maven/mvalla/maven/openwebnet4j/;publish=1</url>  -->
            <url>https://api.bintray.com/maven/mvalla/maven/openwebnet4j/</url>  
            
        </repository>
    </distributionManagement>

</project>